test/negative/109_import_inside_function.fx
// expect: module level
fun f() {
    import Math
    0
}
println(f())
